--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pci</groupId>
-    <artifactId>ulid-test</artifactId>
-    <version>0.0.3</version>
+    <artifactId>ulid</artifactId>
+    <version>0.0.4</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
